[metadata]
name = glow
version = 0.10.5
url = https://github.com/arquolo/glow
author = Paul Maevskikh
author_email = arquolo@gmail.com
description = Toolset for model training and creation of pipelines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
platforms = OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires =
    tqdm
install_requires =
    loky~=2.9,~3.0
    lxml
    numpy~=1.20
    tqdm
    wrapt
dependency_links =
    https://download.pytorch.org/whl/torch_stable.html

[options.extras_require]
psutil =
    psutil
cv =
    numba  # used only for transforms.dithering
    opencv-python~=4.0
    scipy
io =
    imagecodecs
    opencv-python~=4.0
    sounddevice
    soundfile
nn =
    graphviz  # used only for nn.plot_model, needs external graphviz binary
    opencv-python~=4.0
    py3nvml
    torch~=1.9
all =
    %(psutil)s
    %(cv)s
    %(io)s
    %(nn)s
    matplotlib

[options.packages.find]
exclude =
    glow.examples
    glow.test

[flake8]
ignore =
    A003,   # builtins: Class attribute is shadowing a python builtin
    E800,   # eradicate
    I004,   # isort: Found unexpected blank line in imports
    N812,   # pep8: Lowercase imported as non lowercase
    P101,   # string-format: Format string contains unindexed parameters
    P103,   # string-format: Format string contains unindexed parameters
    PIE783  # pie: Celery explicit names (naive)
    PIE784  # pie: Celery explicit crontab args (naive)
    PIE785, # pie: Celery tasks should have expirations (naive)
    PIE808, # pie: Prefer simple range
    PT011,  # pytest: Set match parameter
    R504,   # return: Unnecessary variable assignement before return statement
    SIM105, # simplify: Use contextlib.suppress instead of try-except-pass
    SIM106  # simplify: Handle error-cases first
    SIM119, # simplify: Use dataclass
    W503,   #   Line break before binary operator
    W504    #   Line break after binary operator

exclude = .git,__pycache__,build,dist
max-complexity = 10

[mypy]
sqlite_cache = True
ignore_missing_imports = True
plugins =
    numpy.typing.mypy_plugin

[yapf]
based_on_style = facebook

align_closing_bracket_with_visual_indent = True
allow_multiline_dictionary_keys = True
coalesce_brackets = True
column_limit = 79
dedent_closing_brackets = False
spaces_around_power_operator = True

split_arguments_when_comma_terminated = True
split_before_dict_set_generator = False
split_before_dot = True
split_before_expression_after_opening_paren = True
