[metadata]
name = glow
version = 0.11.1
url = https://github.com/arquolo/glow
author = Paul Maevskikh
author_email = arquolo@gmail.com
description = Toolset for model training and creation of pipelines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
platforms = OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires =
    tqdm
install_requires =
    loky>=2.9
    lxml
    numpy~=1.20
    tqdm
    wrapt
dependency_links =
    https://download.pytorch.org/whl/torch_stable.html

[options.extras_require]
psutil =
    psutil
cv =
    numba  # used only for transforms.dithering
    opencv-python~=4.0
    scipy
io =
    imagecodecs
    opencv-python~=4.0
    sounddevice
    soundfile
nn =
    graphviz  # used only for nn.plot_model, needs external graphviz binary
    opencv-python~=4.0
    py3nvml
    torch~=1.10
all =
    %(psutil)s
    %(cv)s
    %(io)s
    %(nn)s
    matplotlib
dev =
    flake8
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-eradicate
    flake8-isort
    flake8-logging-format
    flake8-pie
    flake8-pyi
    flake8-pytest
    flake8-pytest-style
    flake8-quotes
    flake8-return
    flake8-simplify
    flake8-string-format
    mypy~=0.900
    pep8-naming
    pytest~=6.0
    typing_extensions~=3.10
    yapf~=0.30

[options.packages.find]
exclude =
    glow.examples
    glow.test

[flake8]
ignore =
    A003   ; builtins
    E800   ; eradicate
    I004   ; isort
    N812   ; pep8
    P101,P103 ; string-format
    PIE783,PIE784,PIE785,PIE808 ; pie
    PT011  ; pytest
    R504   ; return
    RST    ; rst-docstrings
    SIM105,SIM106,SIM119 ; simplify
    W503,W504 ; pycodestyle

exclude = .git,__pycache__,build,dist
max-complexity = 10

[mypy]
sqlite_cache = True
ignore_missing_imports = True
plugins =
    numpy.typing.mypy_plugin

[yapf]
based_on_style = facebook

align_closing_bracket_with_visual_indent = True
allow_multiline_dictionary_keys = True
coalesce_brackets = True
column_limit = 79
dedent_closing_brackets = False
spaces_around_power_operator = True

split_arguments_when_comma_terminated = True
split_before_dict_set_generator = False
split_before_dot = True
split_before_expression_after_opening_paren = True
